# patchwork

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
src/patchwork/: __init__.py  cli.py  scanner.py
src/patchwork/mcp/: server.py
src/patchwork/miners/: __init__.py  api_patterns.py  ast_base.py  config_detector.py  error_handling.py  git_patterns.py  imports.py  naming.py  structure.py  testing.py
src/patchwork/output/: report.py
tests/: test_naming.py  test_scanner.py
